Minimal updates for cached images, touch and deprecation.

--- a/demo.html
+++ b/demo.html
@@ -14,7 +14,7 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css" />
 	<link rel="stylesheet" type="text/css" href="assets/css/styles.css" />	
 	<script type="text/javascript" src="assets/js/jquery.1.4.1.min.js"></script>
-	<script type="text/javascript" src="jquery.adhere.min.js"></script>	
+	<script type="text/javascript" src="jquery.adhere.min.js?l=1679096644556"></script>
 </head>
 
 <body>
@@ -32,7 +32,7 @@
 					<img src="assets/images/spcb_survey.png" width="450" height="375" alt="SPCB Survey Site" />
 				</figure>
 				<ul>
-					<li data-coords="ah-239-29">School Seal / Logo</li>				
+					<li data-coords="ah-239-29">School Seal / Logo</li>
 					<li data-coords="ah-100-11">User Comments</li>
 					<li data-coords="ah-359-111">Main Question</li>
 					<li data-coords="ah-77-142">Class Sections</li>
